Increased minimum font size to 16px while increasing other font sizes for readability and improved style; Increased image size and made images fit to both 2 and 3-line article titles, while adding a cap to headline image height, and fixing a couple bugs relating to articles that have no assigned image.

--- a/static/style.css
+++ b/static/style.css
@@ -183,7 +183,9 @@ textarea { font-family:monospace; color:#000000; }
 
 label.error { font-family:Verdana, Geneva, sans-serif; color:#ee0000; }
 
-a:link      { color:#000000; text-decoration:none; }
+#override a:hover		{ color:#0072ff; text-decoration: none; }
+#override a:focus		{ color:#0048b8; text-decoration: none; }
+a:link      { color:#000000; }
 a:visited   { color:#000000; text-decoration:none; }
 
 .default { font-family:Verdana, Geneva, sans-serif; }
